--- a/.drone.yml
+++ b/.drone.yml
@@ -1,76 +1,23 @@
-clone:
-  path: github.com/drone/drone
-
-build:
-  image: drone/golang:1.5
-  environment:
-    - GO15VENDOREXPERIMENT=1
-  commands:
-    - make deps gen
-    - make test test_postgres test_mysql
-    - make build build_static deb docs
-
-compose:
-  postgres:
-    image: postgres:9.4.5
-    environment:
-      - POSTGRES_USER=postgres
-  mysql:
-    image: mysql:5.6.27
-    environment:
-      - MYSQL_DATABASE=test
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-
+---
 publish:
-  s3:
-    acl: public-read
-    region: us-east-1
-    bucket: downloads.drone.io
-    access_key: $$AWS_KEY
-    secret_key: $$AWS_SECRET
-    source: contrib/debian/drone.deb
-    target: drone/0.4
-    when:
-      repo: drone/drone
-
-  # sync the documentation with the s3 bucket
-
-  s3_sync:
-    acl: public-read
-    region: us-east-1
-    bucket: readme.drone.io
-    access_key: $$AWS_KEY
-    secret_key: $$AWS_SECRET
-    source: /drone/tmp/
-    target: /
-    exclude: "*.svg"
-    when:
-      repo: drone/drone
-      branch: master
-
-  s3_sync:
-    acl: public-read
-    region: us-east-1
-    bucket: readme.drone.io
-    access_key: $$AWS_KEY
-    secret_key: $$AWS_SECRET
-    source: /drone/tmp/
-    target: /
-    exclude: "*"
-    include: "**.svg"
-    content_type: "image/svg+xml"
-    when:
-      repo: drone/drone
-      branch: master
-
+  # Build tag slingshot/drone:$BRANCH 
   docker:
-    username: drone
-    password: $$DOCKER_PASS
-    email: $$DOCKER_EMAIL
-    repo: drone/drone
-    tag:
-      - "latest" 
-      - "0.4"
+    repo: slingshot/drone
+    tag: $$BRANCH
+    registry: registry.prod.aws.skyscnr.com
+    username: admin
+    password: password
+    email: bob@skyscanner.net
+    storage_driver: overlay
+
+  # build slingshot/drone:latest on master branch only 
+  docker:
+    repo: slingshot/drone
+    tag: latest
+    registry: registry.prod.aws.skyscnr.com
+    username: admin
+    password: password
+    email: bob@skyscanner.net
+    storage_driver: overlay
     when:
-      repo: drone/drone
       branch: master
