--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,8 @@ publish:
     email: bob@skyscanner.net
     storage_driver: overlay
 
-  # build slingshot/drone:latest on master branch only 
+publish:
+  # Build latest on master 
   docker:
     repo: slingshot/drone
     tag: latest
